CPOP Gain: $ 10.65 Win %: 25.00 in 4 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TS
CPOP Gain: $ 10.56 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2
CPOP Gain: $ -0.24 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TR_QP_DB10
CPOP Gain: $ -24.61 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_TR_DB10
CPOP Gain: $ 1.88 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_AV_DB10
CPOP Gain: $ 0.83 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_AL_DB10
CPOP Gain: $ -2.69 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_QP_DB10
CPOP Gain: $ -24.61 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_TR_DB10
CPOP Gain: $ 2.01 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_AV_DB10
CPOP Gain: $ -2.69 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_QP_DB10
CPOP Gain: $ 2.73 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IT_QL_DB10
CPOP Gain: $ -1.81 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IT_QP_DB10
CPOP Gain: $ -30.94 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TR_IR3
CPOP Gain: $ -0.5 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TR_QP
CPOP Gain: $ -152.2 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_QP_IR3
CPOP Gain: $ -27.63 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_TR
CPOP Gain: $ 4.63 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_AV
CPOP Gain: $ 3.2 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_AL
CPOP Gain: $ -171.35 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV_QP
CPOP Gain: $ -27.63 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_TR
CPOP Gain: $ 4.7 Win %: 40.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_AV
CPOP Gain: $ 3.2 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_AL
CPOP Gain: $ -170.74 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM_QP
CPOP Gain: $ -3.02 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IT_QL
CPOP Gain: $ -2.86 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IT_QP
CPOP Gain: $ -5055.71 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_AO_AC
CPOP Gain: $ -0.43 Win %: 60.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_QP_PM
CPOP Gain: $ -1.82 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TR_TS
CPOP Gain: $ 11.44 Win %: 40.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_RV
CPOP Gain: $ -86.58 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IR3
CPOP Gain: $ -27.63 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TR
CPOP Gain: $ 4.64 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_AV
CPOP Gain: $ 3.2 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_AL
CPOP Gain: $ 9.81 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_VI
CPOP Gain: $ 6.5 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_LI
CPOP Gain: $ -172.44 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_QP
CPOP Gain: $ 10.56 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_HM
CPOP Gain: $ 9.69 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_SS
CPOP Gain: $ -3.24 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_QL
CPOP Gain: $ -0.09 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_DB10
CPOP Gain: $ -546.33 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_AO
CPOP Gain: $ -746.71 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_AC
CPOP Gain: $ -3.74 Win %: 0 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_IT
CPOP Gain: $ -0.15 Win %: 80.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_PM
CPOP Gain: $ -3.53 Win %: 20.00 in 5 days with algo TB3_PL_QM_OB3_OS3_CB2_CS2_TS
CPOP Gain: $ -0.85 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -23.1 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 1.99 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 0.26 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AL_DB30
CPOP Gain: $ -3.39 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -23.1 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 1.99 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_AV_DB30
CPOP Gain: $ -3.39 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 2.82 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.72 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QP_DB30
CPOP Gain: $ -1.28 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_IR5
CPOP Gain: $ -138.59 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_QP
CPOP Gain: $ -171.02 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QP_IR5
CPOP Gain: $ -24.19 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_TR
CPOP Gain: $ 2.71 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AV
CPOP Gain: $ -1.5 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AL
CPOP Gain: $ -200.45 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_QP
CPOP Gain: $ -23.93 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_TR
CPOP Gain: $ 2.69 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_AV
CPOP Gain: $ -1.5 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_AL
CPOP Gain: $ -200.25 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_QP
CPOP Gain: $ -6.29 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QL
CPOP Gain: $ -6.65 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QP
CPOP Gain: $ -5478.54 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AO_AC
CPOP Gain: $ -0.33 Win %: 60.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QP_PM
CPOP Gain: $ -24.19 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_TS
CPOP Gain: $ 9.75 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV
CPOP Gain: $ -3.08 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IR5
CPOP Gain: $ -24.19 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR
CPOP Gain: $ 2.71 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AV
CPOP Gain: $ -1.18 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AL
CPOP Gain: $ Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_VI
CPOP Gain: $ 9.12 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_LI
CPOP Gain: $ -200.25 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QP
CPOP Gain: $ 11.7 Win %: 40.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM
CPOP Gain: $ -11.69 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_SS
CPOP Gain: $ -6.54 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QL
CPOP Gain: $ 0.29 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_DB30
CPOP Gain: $ 10.86 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AO
CPOP Gain: $ -1511.34 Win %: 0 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AC
CPOP Gain: $ -6.55 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT
CPOP Gain: $ -0.2 Win %: 40.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_PM
CPOP Gain: $ 9.75 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TS
CPOP Gain: $ -1.02 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -25.23 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 1.99 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 0.25 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AL_DB30
CPOP Gain: $ -3.48 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -24.77 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 1.99 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AV_DB30
CPOP Gain: $ -3.48 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 2.82 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.8 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QP_DB30
CPOP Gain: $ -1.52 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_IR5
CPOP Gain: $ -141.08 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_QP
CPOP Gain: $ -184.45 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP_IR5
CPOP Gain: $ -26.44 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_TR
CPOP Gain: $ 2.5 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AV
CPOP Gain: $ -1.68 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AL
CPOP Gain: $ -212.24 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_QP
CPOP Gain: $ -26.44 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_TR
CPOP Gain: $ 2.5 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AV
CPOP Gain: $ -1.68 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AL
CPOP Gain: $ -209.13 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_QP
CPOP Gain: $ -6.44 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QL
CPOP Gain: $ -6.71 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QP
CPOP Gain: $ -4787.61 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AO_AC
CPOP Gain: $ -1.53 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP_PM
CPOP Gain: $ -25.92 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_TS
CPOP Gain: $ 9.6 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV
CPOP Gain: $ -3.29 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IR5
CPOP Gain: $ -26.44 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR
CPOP Gain: $ 2.5 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AV
CPOP Gain: $ -1.3 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AL
CPOP Gain: $ -0.55 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_VI
CPOP Gain: $ 9.16 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_LI
CPOP Gain: $ -209.13 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP
CPOP Gain: $ 9.6 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM
CPOP Gain: $ -8.71 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_SS
CPOP Gain: $ -6.52 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QL
CPOP Gain: $ -0.47 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_DB30
CPOP Gain: $ 9.81 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AO
CPOP Gain: $ -4641 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AC
CPOP Gain: $ -6.7 Win %: 0 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT
CPOP Gain: $ -0.16 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_PM
CPOP Gain: $ 9.6 Win %: 20.00 in 5 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TS
CPOP Gain: $ -0.6 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TR_QP_DB15
CPOP Gain: $ -32.56 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_TR_DB15
CPOP Gain: $ 2.37 Win %: 40.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_AV_DB15
CPOP Gain: $ 0.82 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_AL_DB15
CPOP Gain: $ -1.14 Win %: 40.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_QP_DB15
CPOP Gain: $ -33.27 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_TR_DB15
CPOP Gain: $ 2.37 Win %: 40.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_AV_DB15
CPOP Gain: $ -2.3 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_QP_DB15
CPOP Gain: $ 2.96 Win %: 60.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IT_QL_DB15
CPOP Gain: $ -1.85 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IT_QP_DB15
CPOP Gain: $ -38.12 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TR_IR4
CPOP Gain: $ -133.32 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TR_QP
CPOP Gain: $ -84.48 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_QP_IR4
CPOP Gain: $ -43.04 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_TR
CPOP Gain: $ -15.98 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_AV
CPOP Gain: $ 11.29 Win %: 40.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_AL
CPOP Gain: $ -144.2 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV_QP
CPOP Gain: $ -43.75 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_TR
CPOP Gain: $ -15.98 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_AV
CPOP Gain: $ 10.66 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_AL
CPOP Gain: $ -144.2 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM_QP
CPOP Gain: $ -6.38 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IT_QL
CPOP Gain: $ -6.69 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IT_QP
CPOP Gain: $ 8.92 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_AO_AC
CPOP Gain: $ -0.23 Win %: 40.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_QP_PM
CPOP Gain: $ -43.75 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TR_TS
CPOP Gain: $ 10.96 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_RV
CPOP Gain: $ 3.48 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IR4
CPOP Gain: $ -43.52 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TR
CPOP Gain: $ -15.67 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_AV
CPOP Gain: $ 10.66 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_AL
CPOP Gain: $ 2.54 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_VI
CPOP Gain: $ 11.2 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_LI
CPOP Gain: $ -142.88 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_QP
CPOP Gain: $ 10.96 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_HM
CPOP Gain: $ 11.45 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_SS
CPOP Gain: $ -6.52 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_QL
CPOP Gain: $ 0.7 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_DB15
CPOP Gain: $ 10.96 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_AO
CPOP Gain: $ 8.92 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_AC
CPOP Gain: $ -6.64 Win %: 0 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_IT
CPOP Gain: $ -0.12 Win %: 60.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_PM
CPOP Gain: $ 10.96 Win %: 20.00 in 5 days with algo TB2_HL_QM_OB1_OS1_CB2_CS2_TS
