CRCT Gain: $ -11.58 Win %: 33.00 in 3 days with algo TB4_HI_QM_OB2_OS2_CB2_CS2_TS
CRCT Gain: $ -0.69 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3
CRCT Gain: $ -1.84 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_TR_QP_DB6
CRCT Gain: $ -0.34 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_RV_TR_DB6
CRCT Gain: $ 1.61 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_RV_AV_DB6
CRCT Gain: $ 0.03 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_RV_AL_DB6
CRCT Gain: $ -1.76 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_RV_QP_DB6
CRCT Gain: $ 0.29 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_HM_TR_DB6
CRCT Gain: $ 1.03 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_HM_AV_DB6
CRCT Gain: $ -2.36 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_HM_QP_DB6
CRCT Gain: $ -1.62 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_IT_QL_DB6
CRCT Gain: $ -2.36 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_IT_QP_DB6
CRCT Gain: $ 0.29 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_TR_IR1
CRCT Gain: $ -0.25 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_TR_TS
CRCT Gain: $ -1.84 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_TR_QP
CRCT Gain: $ -2.65 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_QP_IR1
CRCT Gain: $ -0.35 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_RV_TR
CRCT Gain: $ 1.61 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_RV_AV
CRCT Gain: $ 0.03 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_RV_AL
CRCT Gain: $ -0.7 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_RV_QP
CRCT Gain: $ 0.29 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_HM_TR
CRCT Gain: $ 1.03 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_HM_AV
CRCT Gain: $ -2.26 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_HM_AL
CRCT Gain: $ -2.36 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_HM_QP
CRCT Gain: $ -1.62 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_IT_QL
CRCT Gain: $ -2.36 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_IT_QP
CRCT Gain: $ -0.46 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_IT_TS
CRCT Gain: $ -2.37 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_AO_AC
CRCT Gain: $ 0.0 Win %: 100.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_QP_PM
CRCT Gain: $ -0.26 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_AV_TS
CRCT Gain: $ -0.63 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_AL_TS
CRCT Gain: $ 0.44 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_RV
CRCT Gain: $ -1.02 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_IR1
CRCT Gain: $ 0.29 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_TR
CRCT Gain: $ 1.03 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_AV
CRCT Gain: $ -0.74 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_AL
CRCT Gain: $ 0.69 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_VI
CRCT Gain: $ 0.52 Win %: 50.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_LI
CRCT Gain: $ -2.36 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_QP
CRCT Gain: $ -0.69 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_HM
CRCT Gain: $ -2.12 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_SS
CRCT Gain: $ -0.49 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_QL
CRCT Gain: $ -1.56 Win %: 0 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_DB6
CRCT Gain: $ -1.59 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_AO
CRCT Gain: $ 0.27 Win %: 75.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_AC
CRCT Gain: $ -0.72 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_IT
CRCT Gain: $ 0.0 Win %: 100.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_PM
CRCT Gain: $ -0.43 Win %: 25.00 in 4 days with algo TB5_HL_LO_QM_OB4_OS4_CB3_CS3_TS
CRCT Gain: $ -0.11 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_TR_QP_DB6
CRCT Gain: $ 2.32 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_RV_TR_DB6
CRCT Gain: $ 2.82 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_RV_AV_DB6
CRCT Gain: $ 2.15 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_RV_AL_DB6
CRCT Gain: $ -0.34 Win %: 50.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_RV_QP_DB6
CRCT Gain: $ 1.45 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_HM_TR_DB6
CRCT Gain: $ 1.28 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_HM_AV_DB6
CRCT Gain: $ -0.11 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_HM_QP_DB6
CRCT Gain: $ 1.45 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_IT_QL_DB6
CRCT Gain: $ -0.11 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_IT_QP_DB6
CRCT Gain: $ 1.98 Win %: 100.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_TR_IR1
CRCT Gain: $ 0.16 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_TR_TS
CRCT Gain: $ -0.11 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_TR_QP
CRCT Gain: $ 0.39 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_QP_IR1
CRCT Gain: $ 2.32 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_RV_TR
CRCT Gain: $ 2.82 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_RV_AV
CRCT Gain: $ 2.15 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_RV_AL
CRCT Gain: $ -0.34 Win %: 50.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_RV_QP
CRCT Gain: $ -0.01 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_HM_TR
CRCT Gain: $ 1.28 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_HM_AV
CRCT Gain: $ 1.28 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_HM_AL
CRCT Gain: $ -0.11 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_HM_QP
CRCT Gain: $ 1.45 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_IT_QL
CRCT Gain: $ -0.11 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_IT_QP
CRCT Gain: $ 0.16 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_IT_TS
CRCT Gain: $ 0.02 Win %: 50.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_AO_AC
CRCT Gain: $ 0.0 Win %: 100.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_QP_PM
CRCT Gain: $ -0.01 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_AV_TS
CRCT Gain: $ -0.01 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_AL_TS
CRCT Gain: $ 2.32 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_RV
CRCT Gain: $ 1.98 Win %: 100.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_IR1
CRCT Gain: $ 1.45 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_TR
CRCT Gain: $ 1.28 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_AV
CRCT Gain: $ 1.28 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_AL
CRCT Gain: $ 0.65 Win %: 100.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_VI
CRCT Gain: $ 1.12 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_LI
CRCT Gain: $ -0.11 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_QP
CRCT Gain: $ 1.45 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_HM
CRCT Gain: $ -2.09 Win %: 50.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_SS
CRCT Gain: $ 1.45 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_QL
CRCT Gain: $ 1.45 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_DB6
CRCT Gain: $ 0.61 Win %: 50.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_AO
CRCT Gain: $ 0.86 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_AC
CRCT Gain: $ 1.45 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_IT
CRCT Gain: $ 0.0 Win %: 100.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_PM
CRCT Gain: $ 0.16 Win %: 75.00 in 4 days with algo TB5_HL_HS_QM_OB5_OS5_CB4_CS4_TS
CRCT Gain: $ -6.78 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_TR_QP_DB30
CRCT Gain: $ 1.63 Win %: 75.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_RV_TR_DB30
CRCT Gain: $ 0.66 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_RV_AV_DB30
CRCT Gain: $ -1.13 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_RV_AL_DB30
CRCT Gain: $ -8.75 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_RV_QP_DB30
CRCT Gain: $ -0.45 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_HM_TR_DB30
CRCT Gain: $ -0.09 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_HM_AV_DB30
CRCT Gain: $ -9.33 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_HM_QP_DB30
CRCT Gain: $ -0.81 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_IT_QL_DB30
CRCT Gain: $ -8.17 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_IT_QP_DB30
CRCT Gain: $ 0.8 Win %: 75.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_TR_IR5
CRCT Gain: $ 0.61 Win %: 75.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_TR_TS
CRCT Gain: $ -8.52 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_TR_QP
CRCT Gain: $ -9.96 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_QP_IR5
CRCT Gain: $ -1.14 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_RV_TR
CRCT Gain: $ -2.43 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_RV_AV
CRCT Gain: $ -1.25 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_RV_AL
CRCT Gain: $ -10.81 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_RV_QP
CRCT Gain: $ -1.46 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_HM_TR
CRCT Gain: $ 0.48 Win %: 75.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_HM_AV
CRCT Gain: $ -0.08 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_HM_AL
CRCT Gain: $ -12.33 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_HM_QP
CRCT Gain: $ -1.64 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_IT_QL
CRCT Gain: $ -10.17 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_IT_QP
CRCT Gain: $ -0.92 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_IT_TS
CRCT Gain: $ -14.15 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_AO_AC
CRCT Gain: $ -0.12 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_QP_PM
CRCT Gain: $ -1.09 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_AV_TS
CRCT Gain: $ 0.51 Win %: 75.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_AL_TS
CRCT Gain: $ -1.46 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_RV
CRCT Gain: $ -0.02 Win %: 75.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_IR5
CRCT Gain: $ -1.09 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_TR
CRCT Gain: $ -2.43 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_AV
CRCT Gain: $ -1.25 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_AL
CRCT Gain: $ -3.96 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_VI
CRCT Gain: $ 0.33 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_LI
CRCT Gain: $ -10.17 Win %: 0 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_QP
CRCT Gain: $ -4.86 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_HM
CRCT Gain: $ -3.08 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_SS
CRCT Gain: $ -2.6 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_QL
CRCT Gain: $ -0.53 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_DB30
CRCT Gain: $ -2.36 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_AO
CRCT Gain: $ -7.31 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_AC
CRCT Gain: $ -3.02 Win %: 25.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_IT
CRCT Gain: $ -0.74 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_PM
CRCT Gain: $ 0.09 Win %: 50.00 in 4 days with algo TB1_HL_LO_QM_OB1_OS1_CB4_CS4_TS
CRCT Gain: $ -5.86 Win %: 0 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_TR_QP_DB8
CRCT Gain: $ 0.4 Win %: 50.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_RV_TR_DB8
CRCT Gain: $ -2.67 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_RV_AV_DB8
CRCT Gain: $ -0.46 Win %: 50.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_RV_AL_DB8
CRCT Gain: $ -2.04 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_RV_QP_DB8
CRCT Gain: $ -2.67 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_HM_TR_DB8
CRCT Gain: $ -2.67 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_HM_AV_DB8
CRCT Gain: $ -1.9 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_HM_QP_DB8
CRCT Gain: $ 1.55 Win %: 50.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_IT_QL_DB8
CRCT Gain: $ -1.9 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_IT_QP_DB8
CRCT Gain: $ 1.6 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_TR_IR2
CRCT Gain: $ 2.44 Win %: 100.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_TR_TS
CRCT Gain: $ -3.53 Win %: 0 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_TR_QP
CRCT Gain: $ -3.12 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_QP_IR2
CRCT Gain: $ 1.95 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_RV_TR
CRCT Gain: $ 1.6 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_RV_AV
CRCT Gain: $ -0.32 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_RV_AL
CRCT Gain: $ -6.69 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_RV_QP
CRCT Gain: $ 1.6 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_HM_TR
CRCT Gain: $ 1.6 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_HM_AV
CRCT Gain: $ 1.6 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_HM_AL
CRCT Gain: $ -4.16 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_HM_QP
CRCT Gain: $ 0.52 Win %: 50.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_IT_QL
CRCT Gain: $ -4.16 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_IT_QP
CRCT Gain: $ 0.52 Win %: 50.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_IT_TS
CRCT Gain: $ 1.85 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_AO_AC
CRCT Gain: $ -3.26 Win %: 0 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_QP_PM
CRCT Gain: $ 2.44 Win %: 100.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_AV_TS
CRCT Gain: $ 2.44 Win %: 100.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_AL_TS
CRCT Gain: $ 0.24 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_RV
CRCT Gain: $ 1.89 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_IR2
CRCT Gain: $ 1.6 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_TR
CRCT Gain: $ 1.6 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_AV
CRCT Gain: $ 1.6 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_AL
CRCT Gain: $ -2.81 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_VI
CRCT Gain: $ 1.05 Win %: 50.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_LI
CRCT Gain: $ -4.16 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_QP
CRCT Gain: $ 1.85 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_HM
CRCT Gain: $ -2.4 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_SS
CRCT Gain: $ 1.85 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_QL
CRCT Gain: $ -2.42 Win %: 25.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_DB8
CRCT Gain: $ 1.85 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_AO
CRCT Gain: $ 1.85 Win %: 75.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_AC
CRCT Gain: $ 0.15 Win %: 50.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_IT
CRCT Gain: $ 0.55 Win %: 50.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_PM
CRCT Gain: $ 2.44 Win %: 100.00 in 4 days with algo TB4_HS_QM_OB1_OS1_CB5_CS5_TS
CRCT Gain: $ -2.04 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_TR_QP_DB8
CRCT Gain: $ -0.24 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_RV_TR_DB8
CRCT Gain: $ 0.49 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_RV_AV_DB8
CRCT Gain: $ 0.25 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_RV_AL_DB8
CRCT Gain: $ -2.26 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_RV_QP_DB8
CRCT Gain: $ -0.57 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_HM_TR_DB8
CRCT Gain: $ 0.49 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_HM_AV_DB8
CRCT Gain: $ -2.04 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_HM_QP_DB8
CRCT Gain: $ 1.16 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_IT_QL_DB8
CRCT Gain: $ -2.04 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_IT_QP_DB8
CRCT Gain: $ -7.36 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_TR_IR2
CRCT Gain: $ -1.85 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_TR_TS
CRCT Gain: $ -2.04 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_TR_QP
CRCT Gain: $ -2.13 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_QP_IR2
CRCT Gain: $ -1.23 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_RV_TR
CRCT Gain: $ 1.46 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_RV_AV
CRCT Gain: $ 0.28 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_RV_AL
CRCT Gain: $ -2.37 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_RV_QP
CRCT Gain: $ -0.57 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_HM_TR
CRCT Gain: $ 0.49 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_HM_AV
CRCT Gain: $ 0.25 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_HM_AL
CRCT Gain: $ -2.04 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_HM_QP
CRCT Gain: $ -0.26 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_IT_QL
CRCT Gain: $ -2.04 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_IT_QP
CRCT Gain: $ -0.08 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_IT_TS
CRCT Gain: $ -0.57 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_AO_AC
CRCT Gain: $ -0.99 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_QP_PM
CRCT Gain: $ -0.79 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_AV_TS
CRCT Gain: $ -1.03 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_AL_TS
CRCT Gain: $ -1.23 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_RV
CRCT Gain: $ -0.57 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_IR2
CRCT Gain: $ -0.57 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_TR
CRCT Gain: $ 0.49 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_AV
CRCT Gain: $ 0.25 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_AL
CRCT Gain: $ 0.31 Win %: 75.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_VI
CRCT Gain: $ 0.25 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_LI
CRCT Gain: $ -2.04 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_QP
CRCT Gain: $ -0.57 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_HM
CRCT Gain: $ 0.0 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_SS
CRCT Gain: $ -4.48 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_QL
CRCT Gain: $ -0.57 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_DB8
CRCT Gain: $ -0.57 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_AO
CRCT Gain: $ -2.93 Win %: 25.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_AC
CRCT Gain: $ 0.65 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_IT
CRCT Gain: $ 1.03 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_PM
CRCT Gain: $ -1.85 Win %: 50.00 in 4 days with algo TB4_OC_QM_OB4_OS4_CB5_CS5_TS
